First functional version

--- a/LabSupply/MainWindow.xaml
+++ b/LabSupply/MainWindow.xaml
@@ -5,8 +5,86 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LabSupply"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
+        Title="MainWindow" Height="700" Width="610" MinWidth="610" MinHeight="700">
+
+    <Window.Resources>
+        <local:LabSupplyViewModel x:Key="SupplyVM"/>
+    </Window.Resources>
+
+    <Grid Width="Auto" HorizontalAlignment="Left" VerticalAlignment="Top">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition MinWidth="590" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition MinHeight="100" />
+            <RowDefinition MinHeight="100" />
+            <RowDefinition MinHeight="250" />
+            <RowDefinition MinHeight="150" />
+        </Grid.RowDefinitions>
+
+        <!-- Row 0 -->
+        <GroupBox Header="Set Values" Name="SetValues_GroupBox" Grid.Column="0" Grid.Row="0" Margin="10,10,10,10">
+            <Grid Margin="10,10,10,10">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1*" />
+                    <ColumnDefinition Width="1*" />
+                    <ColumnDefinition Width="1*" />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <TextBlock Grid.Column="0" Grid.Row="0" Name="SetVoltage_Label" Text="Set Voltage"/>
+                <TextBox Grid.Column="0" Grid.Row="1" HorizontalAlignment="Left" Name="SetVoltage_TextBox" IsReadOnly="False" IsEnabled="True" LostFocus="FocusLostHandler" KeyUp="KeyUpHander" Background="WhiteSmoke" Width="60" Height="20"
+                        Text="{Binding SetVoltageTxt, Mode=TwoWay, UpdateSourceTrigger=Explicit, Source={StaticResource SupplyVM}}"
+                        />
+                <TextBlock Grid.Column="1" Grid.Row="0" Name="SetCurrent_Label" Text="Set Current"/>
+                <TextBox Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" Name="SetCurrent_TextBox" IsReadOnly="False" IsEnabled="True" LostFocus="FocusLostHandler" KeyUp="KeyUpHander" Background="WhiteSmoke" Width="60" Height="20"
+                        Text="{Binding SetCurrentTxt, Mode=TwoWay, UpdateSourceTrigger=Explicit, Source={StaticResource SupplyVM}}"
+                        />
+                <TextBlock Grid.Column="2" Grid.Row="0" Name="OutputOn_Label" Text="Output Enabled"/>
+                <CheckBox Grid.Column="2" Grid.Row="1" HorizontalAlignment="Left" Name="OutputOn_TextBox" IsEnabled="True"
+                        IsChecked="{Binding OutputOn, Mode=TwoWay, Source={StaticResource SupplyVM}}"/>
+            </Grid>
+        </GroupBox>
         
+        <!-- Row 1 -->
+        <GroupBox Header="Measured Values" Name="MeasuredValues_GroupBox" Grid.Column="0" Grid.Row="1" Margin="10,10,10,10">
+            <Grid Margin="10,10,10,10">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1*" />
+                    <ColumnDefinition Width="1*" />
+                    <ColumnDefinition Width="1*" />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <TextBlock Grid.Column="0" Grid.Row="0" Name="MeasuredVoltage_Label" Text="Voltage"/>
+                <TextBox Grid.Column="0" Grid.Row="1" HorizontalAlignment="Left" Name="MeasuredVoltage_TextBox" IsReadOnly="True" IsEnabled="True" LostFocus="FocusLostHandler" KeyUp="KeyUpHander" Background="WhiteSmoke" Width="60" Height="20"
+                        Text="{Binding MeasuredVoltageTxt, Mode=OneWay, UpdateSourceTrigger=Default, Source={StaticResource SupplyVM}}"
+                        />
+                <TextBlock Grid.Column="1" Grid.Row="0" Name="MeasuredCurrent_Label" Text="Current"/>
+                <TextBox Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" Name="MeasuredCurrent_TextBox" IsReadOnly="True" IsEnabled="True" LostFocus="FocusLostHandler" KeyUp="KeyUpHander" Background="WhiteSmoke" Width="60" Height="20"
+                        Text="{Binding MeasuredCurrentTxt, Mode=OneWay, UpdateSourceTrigger=Default, Source={StaticResource SupplyVM}}"
+                        />
+            </Grid>
+        </GroupBox>
+
+        <!-- Row 2 -->
+        <GroupBox Header="Activity Logging" Name="ActivityLogging_GroupBox" Grid.Column="0" Grid.Row="2" Margin="10,10,10,10">
+            <ScrollViewer Name="ActivityLogScrollViewer" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
+                <TextBox Name="ActivityLogging_TextBox" IsEnabled="True" Background="WhiteSmoke" Margin="10,10,10,10" 
+                Text="{Binding ActivityLogTxt, Mode=OneWay, Source={StaticResource SupplyVM}}"/>
+            </ScrollViewer>
+        </GroupBox>
+        
+        <!-- Row 3 -->
+        <Button Name="Toggle_Button" Grid.Column="2" Grid.Row="3"  Grid.ColumnSpan="1" Width="100" Height="30"
+                    IsEnabled="True"  
+                    Command="{Binding ToggleClick, Source={StaticResource SupplyVM}}"
+                    Content="Set Voltage"/>
+
     </Grid>
+
 </Window>
